--- a/gans2.ipynb
+++ b/gans2.ipynb
@@ -731,8 +731,7 @@
         "\n",
         "g_wgan = train_wgan(g_wgan, d_wgan, spam_loader, z_dim, epochs=50)\n",
         "\n",
-        "# Cell 15: Generate synthetic samples from each GAN\n",
-        "# Cell 15 (Edited): Generate synthetic samples and inverse PCA for classification\n",
+        "# Cell 15: Generate synthetic samples and inverse PCA for classification\n",
         "tfidf_dim = X_tfidf.shape[1]\n",
         "num_synthetic = len(X_train[y_train == 0]) - len(X_train[y_train == 1])\n",
         "\n",
